--- a/other/cory/css/dGame.css
+++ b/other/cory/css/dGame.css
@@ -3,7 +3,7 @@
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background-color: #8F87FF;
+	background-color: #ffffff;
 }
 
 .center1 {text-align: center;}
@@ -35,7 +35,7 @@ button {text-decoration: none;}
 	z-index: 100;
 	width: 35px;
 	height: 35px;
-	background-color: lightgreen;
+	background-color: lightgray;
 	outline: none;
 }
 
@@ -47,7 +47,7 @@ button {text-decoration: none;}
 	z-index: 100;
 	width: 100px;
 	height: 28px;
-	background-color: lightgreen;
+	background-color: lightgray;
 	outline: none;
 }
 
