--- a/other/kp_platformFeatures/css/pf.css
+++ b/other/kp_platformFeatures/css/pf.css
@@ -61,19 +61,26 @@ div, p, h1, {
 }
 
 .fWidth {
-	width: 200px;
+	width: 17%;
 	display: inline-block;
 	text-align: left;
 	margin-left: 5px;
 }
 .fSubWidth {
-	width: 323px;
+	width: 23%;
 	text-align: left;
+	display: inline-block;
+	//margin-left: -2%;
+	margin-left: -5px;
+}
+
+.platformWidthT {
+	width: 15%;
 	display: inline-block;
 }
 
 .platformWidth {
-	width: 96px;
+	width: 15%;
 	display: inline-block;
 }
 
@@ -85,6 +92,10 @@ div, p, h1, {
 	background-color: #99ccee;
 	border-bottom: 1px solid black;
 }
+	.mTitle::before {
+		content: "Feature Comparison by Platform";
+	}
+
 
 .cTitles {
 	display: inline-block;
@@ -112,7 +123,6 @@ div, p, h1, {
 }
 
 /* shapes */
-
 #circle {
 	width: 18px;
 	height: 18px;
@@ -152,61 +162,115 @@ div, p, h1, {
 
 /* Mobile */
 
-/* Default */
-#show-menu-button{
-  display: none;
-}
- 
 /* Phone portrait */
-@media only screen and (max-width: 481px){
+@media only screen and (max-width: 640px){
 
-	.rowContainer {
-//		position: absolute;
-//		top: 80px;
-		border: 1px solid black;
-//		height: calc(100% - 82px);
-//		width: calc(100% - 2px);
-		overflow-y: auto;
-	}
-
-	.lineH {
-//		line-height: 25px;
-		display: inline-block;
-		vertical-align: middle;
-	}
-
-	.fWidth {
-		width: 150px;
-		display: inline-block;
-		text-align: left;
-		margin-left: 5px;
-	}
-	.fSubWidth {
-		width: 250px;
-		text-align: left;
-		display: inline-block;
-	}
-
-	.platformWidth {
-		width: 50px;
-		display: inline-block;
+	body {
+		margin: 0;
+		padding: 0;
+		float: left;
+		width: 100%;
+		font-family: OpenSans;
+		font-size: .8em;
 	}
 
 	/* Title */
 	.mTitle {
-//		line-height: 50px;
-//		height: 50px;
-//		font-size: 32px;
-		background-color: #99ccee;
+		clear: all;
+		line-height: 30px;
+		height: 30px;
+		font-size: 24px;
 		border-bottom: 1px solid black;
 	}
+
+	.mTitle::before {content: "Features by Platform";}
+
 
 	.cTitles {
 		display: inline-block;
 		vertical-align: middle;
-//		line-height: 30px;
-//		height: 30px;
 		background-color: #31689b;
 		color: #fff;
+		line-height: 20px;
+		height: 20px;
 	}
+
+	.rowContainer {
+		position: absolute;
+		top: 50px;
+		border: 0;
+		height: calc(100% - 82px);
+		width: 100%;
+		overflow-y: auto;
+	}
+
+	.lineH {
+		display: inline-block;
+		vertical-align: middle;
+		line-height: 18px;
+	}
+
+	.fWidth {
+		width: 20%;
+		display: inline-block;
+		text-align: left;
+		margin-left: 5px;
+		font-size: .7em;
+	}
+	.fSubWidth {
+		width: 23%;
+		text-align: left;
+		display: inline-block;
+		margin-left: -5%;
+		font-size: .7em;
+	}
+
+	.platformWidthT {
+		width: 15%;
+		display: inline-block;
+		font-size: .7em;
+	}
+
+	.platformWidth {
+		width: 15%;
+		display: inline-block;
+		font-size: .7em;
+	}
+	/* shapes */
+	#circle {
+		width: 12px;
+		height: 12px;
+		background: #4e8cba;
+		-moz-border-radius: 6px;
+		-webkit-border-radius: 6px;
+		border-radius: 6px;
+		display: inline-block;
+		margin: 2 0 2 0; 
+	}
+
+	#hcircle {
+		height: 6px;
+		width: 12px;
+		background:#73b0d7;
+		border-radius: 0 0 12px 12px;
+		-moz-border-radius: 0 0 12px 12px;
+		-webkit-border-radius: 0 0 12px 12px;
+		border-radius: 0 0 12px 12px;
+		display: inline-block;
+		margin: 8 0 2 0; 
+	}
+
+	#circleB {
+		background-color: rgba(0, 0, 0, 0);
+		border: 1px solid #73b0d7;
+		height: 11px;
+		width: 11px;
+		-moz-border-radius: 6px;
+		-webkit-border-radius: 6px;
+		border-radius: 6px;
+		display: inline-block;
+		margin: 2 0 2 0; 
+	}
+
 }
+
