--- a/other/kp_platformFeatures/css/pf.css
+++ b/other/kp_platformFeatures/css/pf.css
@@ -20,7 +20,6 @@ body {
 	margin: 0;
 	padding: 0;
 	float: left;
-	//width: 695px;
 	width: 100%;
 	font-family: OpenSans;
 }
@@ -39,12 +38,8 @@ div, p, h1, {
 	overflow-y: auto;
 }
 
-.aCenter {text-align: center;
-}
-
-.lCenter {
-	display: inline-block;
-}
+.aCenter {text-align: center;}
+.lCenter {display: inline-block;}
 
 .fLeft {float: left;}
 .fRight {float: right;}
@@ -60,27 +55,37 @@ div, p, h1, {
 	display: inline-block;
 }
 
+.fullWidthx {
+	width: calc(100% - 2%);
+	display: inline-block;
+}
+
+.mx {
+	width: -1%;
+	display: inline-block;
+}
+
+
 .fWidth {
-	width: 17%;
+	width: 18%;
 	display: inline-block;
 	text-align: left;
 	margin-left: 5px;
 }
 .fSubWidth {
-	width: 23%;
+	width: 26%;
 	text-align: left;
 	display: inline-block;
-	//margin-left: -2%;
-	margin-left: -5px;
+	margin-left: -3%;
 }
 
 .platformWidthT {
-	width: 15%;
+	width: 14%;
 	display: inline-block;
 }
 
 .platformWidth {
-	width: 15%;
+	width: 14%;
 	display: inline-block;
 }
 
@@ -102,9 +107,10 @@ div, p, h1, {
 	vertical-align: middle;
 	line-height: 30px;
 	height: 30px;
-	background-color: #31689b;
 	color: #fff;
 }
+
+.cTitlesB {background-color: #31689b;}
 
 /*  Row coloring */
 .teamLight {background-color: #fff;color: #000;}
@@ -131,7 +137,6 @@ div, p, h1, {
 	-webkit-border-radius: 9px;
 	border-radius: 9px;
 	display: inline-block;
-//	vertical-align: middle;
 	margin: 5 0 2 0; 
 }
 
@@ -163,114 +168,78 @@ div, p, h1, {
 /* Mobile */
 
 /* Phone portrait */
+@media only screen and (max-width: 640px) and (orientation: landscape){
+
+	body {background-color: #99ccee;}
+
+	.fWidth {font-size: .9em;}
+	.fSubWidth {font-size: .9em;}
+}
+
 @media only screen and (max-width: 640px){
 
 	body {
-		margin: 0;
-		padding: 0;
-		float: left;
-		width: 100%;
-		font-family: OpenSans;
 		font-size: .8em;
+		background-color: #99ccee;
 	}
 
 	/* Title */
 	.mTitle {
-		clear: all;
 		line-height: 30px;
 		height: 30px;
 		font-size: 24px;
-		border-bottom: 1px solid black;
 	}
 
 	.mTitle::before {content: "Features by Platform";}
 
-
 	.cTitles {
-		display: inline-block;
-		vertical-align: middle;
-		background-color: #31689b;
-		color: #fff;
 		line-height: 20px;
 		height: 20px;
 	}
 
 	.rowContainer {
-		position: absolute;
 		top: 50px;
 		border: 0;
 		height: calc(100% - 82px);
 		width: 100%;
-		overflow-y: auto;
 	}
 
-	.lineH {
-		display: inline-block;
-		vertical-align: middle;
-		line-height: 18px;
-	}
+	.lineH {line-height: 18px;}
+	.fWidth {font-size: .8em;}
+	.fSubWidth {font-size: .8em;}
+	.platformWidthT {font-size: .8em;}
+	.platformWidth {font-size: .7em;}
 
-	.fWidth {
-		width: 20%;
-		display: inline-block;
-		text-align: left;
-		margin-left: 5px;
-		font-size: .7em;
-	}
-	.fSubWidth {
-		width: 23%;
-		text-align: left;
-		display: inline-block;
-		margin-left: -5%;
-		font-size: .7em;
-	}
-
-	.platformWidthT {
-		width: 15%;
-		display: inline-block;
-		font-size: .7em;
-	}
-
-	.platformWidth {
-		width: 15%;
-		display: inline-block;
-		font-size: .7em;
-	}
 	/* shapes */
 	#circle {
 		width: 12px;
 		height: 12px;
-		background: #4e8cba;
 		-moz-border-radius: 6px;
 		-webkit-border-radius: 6px;
 		border-radius: 6px;
-		display: inline-block;
-		margin: 2 0 2 0; 
+		margin: 2 0 2 0;
+	    margin-left: 10%;
 	}
 
 	#hcircle {
 		height: 6px;
 		width: 12px;
-		background:#73b0d7;
 		border-radius: 0 0 12px 12px;
 		-moz-border-radius: 0 0 12px 12px;
 		-webkit-border-radius: 0 0 12px 12px;
 		border-radius: 0 0 12px 12px;
-		display: inline-block;
 		margin: 8 0 2 0; 
+	    margin-left: 10%;
 	}
 
 	#circleB {
-		background-color: rgba(0, 0, 0, 0);
-		border: 1px solid #73b0d7;
 		height: 11px;
 		width: 11px;
 		-moz-border-radius: 6px;
 		-webkit-border-radius: 6px;
 		border-radius: 6px;
-		display: inline-block;
 		margin: 2 0 2 0; 
+	    margin-left: 10%;
 	}
 
 }
-
