--- a/other/kp_platformFeatures/css/pf.css
+++ b/other/kp_platformFeatures/css/pf.css
@@ -164,6 +164,30 @@ div, p, h1, {
 	margin: 5 0 2 0; 
 }
 
+.header_row {
+	position: relative;
+	background: #ddd;
+	font-weight: 600;
+	cursor: pointer;
+}
+
+.header_closed .arrow {
+	transform: rotate(-90deg);
+}
+
+.arrow {
+	left: 5px;
+	top: 50%;
+	margin-top: -5px;
+	position: absolute;
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 5px 5px 0 5px;
+	border-color: #888 transparent transparent transparent;
+	transition: all .1s ease;
+}
+
 
 /* Mobile */
 
@@ -243,3 +267,4 @@ div, p, h1, {
 	}
 
 }
+
