Updates see descriptin
Client request:
1. close groups by default
2. have "Feature" name not wrap in sub feature column

Personal add:
1. remove group indicator from groups with no children

--- a/other/kp_platformFeatures/css/colors.css
+++ b/other/kp_platformFeatures/css/colors.css
@@ -101,10 +101,10 @@ html{
 }
 
 body {
-    margin: 0px;
-    padding: 0px;
-    font-family: OpenSans;
-    background-color: #99ccee;
+	margin: 0px;
+	padding: 0px;
+	font-family: OpenSans;
+	background-color: #ddd;
 }
 
 div {
