--- a/other/kp_platformFeatures/css/pf.css
+++ b/other/kp_platformFeatures/css/pf.css
@@ -32,10 +32,9 @@ div, p, h1, {
 .rowContainer {
 	position: absolute;
 	top: 80px;
-	border: 1px solid black;
-	height: calc(100% - 82px);
-	width: calc(100% - 2px);
-	overflow-y: auto;
+	height: calc(100% - 80px);
+	width: 100%;
+	overflow-y: scroll;
 }
 
 .aCenter {text-align: center;}
@@ -56,7 +55,7 @@ div, p, h1, {
 }
 
 .fullWidthx {
-	width: calc(100% - 2%);
+	width: calc(100% - 1%);
 	display: inline-block;
 }
 
@@ -110,11 +109,11 @@ div, p, h1, {
 	height: 50px;
 	font-size: 32px;
 	background-color: #99ccee;
-	border-bottom: 1px solid black;
+	border: 1px 0 1px 0 solid black;
 }
-	.mTitle::before {
-		content: "Feature Comparison by Platform";
-	}
+.mTitle::before {
+	content: "Feature Comparison by Platform";
+}
 
 
 .cTitles {
@@ -181,25 +180,35 @@ div, p, h1, {
 
 .header_row {
 	position: relative;
-	background: #ddd;
+	// background: #ddd;
 	font-weight: 600;
 	cursor: pointer;
 }
 
-.header_closed .arrow {
-	transform: rotate(0deg);
+.header_closed .arrow {transform: rotate(0deg);}
+.hR1 {	background: #ddd;}
+.hR1:hover{
+	background-color: #b0b1b2; //d9d9d9
+	transition: all 0.3s ease;
 }
+
+.hR2 {	background: #cacbcc;}
+.hR2:hover{
+	background-color: #b0b1b2; //92c8ed
+	transition: all 0.3s ease;
+}
+
 
 .arrow {
 	left: 5px;
-	top: 50%;
+	top: 60%;
 	margin-top: -5px;
 	position: absolute;
 	width: 0;
 	height: 0;
 	border-style: solid;
 	border-width: 5px 5px 0 5px;
-	border-color: #888 transparent transparent transparent;
+	border-color: #4e8cba transparent transparent transparent;
 	transform: rotate(-90deg);
 	transition: all .05s ease;
 }
@@ -214,13 +223,14 @@ div, p, h1, {
 	border-style: solid;
 	border-width: 5px 5px 0 5px;
 	border-color: transparent; transparent transparent transparent;
-	//transform: rotate(-90deg);
-	//transition: all .05s ease;
-	//background-color: red;
 }
 
-
 .hidden {display: none;}
+
+::-webkit-scrollbar {width: 6px;}
+::-webkit-scrollbar-track {-webkit-box-shadow: inset 0 0 0px rgba(0,0,0,0.3);}
+::-webkit-scrollbar-track-piece {background-color: #ddd;}
+::-webkit-scrollbar-thumb {-webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.5);}
 
 /* Mobile */
 
@@ -257,7 +267,7 @@ div, p, h1, {
 	.rowContainer {
 		top: 50px;
 		border: 0;
-		height: calc(100% - 82px);
+		height: calc(100% - 80px);
 		width: 100%;
 	}
 
@@ -300,4 +310,5 @@ div, p, h1, {
 	}
 
 }
+
 
