--- a/other/kp_platformFeatures/css/colors.css
+++ b/other/kp_platformFeatures/css/colors.css
@@ -104,7 +104,7 @@ body {
 	margin: 0px;
 	padding: 0px;
 	font-family: OpenSans;
-	background-color: #ddd;
+	background-color: #f1f2f2;
 }
 
 div {
