--- a/other/kp_platformFeatures/css/pf.css
+++ b/other/kp_platformFeatures/css/pf.css
@@ -186,15 +186,15 @@ div, p, h1, {
 }
 
 .header_closed .arrow {transform: rotate(0deg);}
-.hR1 {	background: #ddd;}
+.hR1 {	background: #f1f2f2;}
 .hR1:hover{
-	background-color: #b0b1b2; //d9d9d9
+	background-color: #cacbcc; //d9d9d9
 	transition: all 0.3s ease;
 }
 
-.hR2 {	background: #cacbcc;}
+.hR2 {	background: #e4e5e5;}
 .hR2:hover{
-	background-color: #b0b1b2; //92c8ed
+	background-color: #cacbcc; //92c8ed
 	transition: all 0.3s ease;
 }
 
@@ -229,7 +229,7 @@ div, p, h1, {
 
 ::-webkit-scrollbar {width: 6px;}
 ::-webkit-scrollbar-track {-webkit-box-shadow: inset 0 0 0px rgba(0,0,0,0.3);}
-::-webkit-scrollbar-track-piece {background-color: #ddd;}
+::-webkit-scrollbar-track-piece {background-color: #f1f2f2;}
 ::-webkit-scrollbar-thumb {-webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.5);}
 
 /* Mobile */
