--- a/other/qualityAssuranceV2/css/index.css
+++ b/other/qualityAssuranceV2/css/index.css
@@ -15,6 +15,7 @@ body{
 	font-family: OpenSans;
 	width: 100%;
 	overflow: hidden;
+	background-color: #99ccee;
 }
 
 h1 {margin: 0px; padding: 0px; text-align: center; font-family: OpenSans-Bold;}
