--- a/other/qualityAssuranceV2/css/media.css
+++ b/other/qualityAssuranceV2/css/media.css
@@ -1,75 +1,76 @@
 @media only screen and (max-width: 640px){
 	.nav {
-		line-height: 30px;
+		height: 40px;
+		line-height: 40px;
 		width:100%;
 		font-size: .8em;
-		font-weight: bold;
 	}
 
 	.nav ul {padding-left: 3%;}
-	.nav li {width: 50px;}
+	.nav li {width: 50px; line-height: 20px;}
+	.nav li { border-right: 1px solid #000000; }
+	.nav li:last {border-right:none;}
 	.nav a {}
 	.nav a:hover {}
 	.nav a.active {}
 
 	.domoFont {
-		font-size: 2em;
-		letter-spacing: -4;
+		font-size: 1.4em;
+		letter-spacing: -3;
+		font-family: OpenSans, sans-serif;
 	}
 
-	#header {
-		display: none;
-
+	#headerBase {
 		position: absolute;
-		right: 2%;
+		right: 0;
+		top: 0;
+		width: 50%;
+		height: 40px;
 	}
 
-	#header2 {
-		display: none;
-		position: absolute;
-		right: 2%;
-	}
+	#header1 {}
+	#header2 {}
 
-	.header {
-		display: none;
-
-		position: absolute;
-		right: 35px;
+	.header1 {
+		line-height: 40px;
 		z-index: 100;
 	}
 
-	.header:hover {
-		display: none;
-
+	.header1:hover {
 		color: #99ccee;
-		text-shadow: 1px 1px 8px #000;
-		transition: all 3s ease;
+		text-shadow: 1px 1px 6px #000;
+		transition: all 2s ease;
 	}
 
 	.header2 {
-		display: none;
-
-		position: absolute;
-		right: 2%;
-		top: 5px;
+		top: 3px;
+		line-height: 40px;
 		z-index: 1;
 	}
 
-	.header3 {
-		display: none;
-
+	.header3Version {
 		position: absolute;
-		top: -1px;
-		right: -12px;
-		font-size: 12px;
-		width: 200px;
+		right: 5px;
+		font-size: .3em;
+		width: 100%;
 		text-align: right;
 		opacity: 0;
+	}
+
+	.tHover {}
+	.tHover:hover .header3Version {
+		opacity: 1;
+		transition: all 2s ease;
 	}
 
 	/* General Items */
 	.titleFade {
 		font-size: 1em;
 	}
+	content {
+		top: 40px;
+		height: calc(100% - 42px);
+	}
+
 
 }
