--- a/other/qualityAssuranceV2/css/media.css
+++ b/other/qualityAssuranceV2/css/media.css
@@ -51,13 +51,17 @@
 	.titleFade {
 		font-size: 1em;
 	}
-	content {
-		top: 40px;
-		height: calc(100% - 42px);
-	}
+	content {top: 40px;	height: calc(100% - 42px);}
 	.rCount {display: none;}
 	.message {font-size: .7em;line-height: 2em;}
-	/* Navigation & Home page end */	
+	/* Navigation & Home page end */
+
+
+	/*	Team Page - widths */
+	.teamsList {}
+	#teamLayout {font-size: .75em;}
+	/* Team Page end */
+
 }
 
 
@@ -68,4 +72,13 @@
 		font-size: .8em !important;
 	}
 	/* Navigation & Home page end */
+}
+
+@media only screen and (max-width: 500px){
+	/*	widths	Team Page */
+		.teamsList {width: 33% !important;}
+		.qaList{width: 33% !important;}
+		.directorList{width: 33% !important;}
+		.featuresList{display: none;}
+		.ffeaturesList{display: none;}
 }
