--- a/other/qualityAssuranceV2/css/nav.css
+++ b/other/qualityAssuranceV2/css/nav.css
@@ -141,3 +141,9 @@
   cursor: default;
 }
 /* links end */
+
+
+::-webkit-scrollbar {width: 6px;}
+::-webkit-scrollbar-track {-webkit-box-shadow: inset 0 0 0px rgba(0,0,0,0.3);}
+::-webkit-scrollbar-track-piece {background-color: #f1f2f2;}
+::-webkit-scrollbar-thumb {-webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.5);}
