--- a/other/qualityAssuranceV2/css/home.css
+++ b/other/qualityAssuranceV2/css/home.css
@@ -15,9 +15,11 @@
 }
 
 .vertX {
+	position: relative;
 	word-wrap: break-word;
-	//width: 1px;
+	width: 20px;
 	height: 100%;
+	top: 5%;
 	font-size: 1em;
 	font-style: bolder;
 	text-align: center;
@@ -84,10 +86,10 @@
 	font-weight: bolder;
 	border-bottom: 1px black solid;
 /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,fccf84+20&0+0,0.65+20 */
-	background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(252,207,132,0.65) 40%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(252,207,132,0.65) 40%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(252,207,132,0.65) 40%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6fccf84',GradientType=1 ); /* IE6-9 */
+	background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(153,204,238,0.65) 40%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(153,204,238,0.65) 40%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(153,204,238,0.65) 40%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#b7daf5',GradientType=1 ); /* IE6-9 */
 }
 
 .lSquad2 {
