--- a/other/qualityAssuranceV2/css/teams.css
+++ b/other/qualityAssuranceV2/css/teams.css
@@ -16,14 +16,23 @@
 	position: absolute;
 	opacity: 1;
 	width: 100%;
+	height: 100%;
 	top: 40%;
-	font-size: 48;
+	font-size: 300%;
 	font-style: bolder;
 }
+/*
 .teamtitleFade.hide {
 	opacity: 0;
-	transition: all 3s ease;
+	transition: all 4s ease;
 }
+*/
+.hide {
+	opacity: 0;
+	height: 0px;
+	transition: all 4s ease;
+}
+
 
 .teamFade {
 	opacity: 0;
@@ -32,6 +41,12 @@
 	opacity: 1;
 	transition: all 2s ease;
 }
+
+.show {
+	opacity: 1;
+	transition: all 2s ease;
+}
+
 
 #teamLayout {
 	position: absolute;
