--- a/other/qualityAssuranceV2/css/servers.css
+++ b/other/qualityAssuranceV2/css/servers.css
@@ -2,60 +2,27 @@
 	position: absolute;
 	top: 0;
 	width: 100%;
-	height: 100%;
-	//background-color: #FFCC99;
+	height: calc(100% - 22px);
 }
+
 #serverBody {
 	position: absolute;
 	top: 0;
 	bottom: 0;
-	//background-color: #FFCC99;
+//	height: 100%;
+	width: 100%;
+//	background-color: #FFCC99;
 }
+
 #servertitles {
-	position: fixed;
-	top: 89px;
-	height: 33px;
+	position: absolute;
+	top: 0;
+	height: 1.5em;
+	width: 100%;
+	line-height: 1.5em;
 	border-bottom: 1px solid black;
-}
-.servertop {position: fixed; top: 123px;}
-.servers {position: relative; height: 30px; line-height: 30px; width: calc(100% - 2px);}
-.dev {background-color: #f1f2f2;}
-.branch {background-color: #cacbcc;}
-.fa {background-color: #b7daf5;}
-.ga {background-color: #73b0d7;}
-
-/* Field Widths */
-.fields {
-	white-space: nowrap;
-}
-.wname {
-	width: 150px;
-	text-align: left;
-	padding-left: 15px;
-}
-
-.wsname {
-	width: 300px;
-	text-align: left;
-	padding-left: 15px;
-}
-
-.wlink {
-	width: 373px;
-	text-align: left;
-	padding-left: 15px;
-}
-.wnotes {
-	width: 180px;
-	text-align: left;
-	padding-left: 15px;
-}
-.wtype {
-	width: 80px;
-	text-align: center;
-	float: right;
-	padding-right: 18px;
-	margin-right: 2px;
+	background-color: lightorange;
+	color: white;
 }
 
 .titleFade {
@@ -65,19 +32,57 @@
 	line-height: 500px;
 	font-size: 48;
 	font-style: bolder;
-	//background-color: #f1f2f2;
 }
-.titleFade.hide {
-	opacity: 0;
-	transition: all 3s ease;
+.hide {opacity: 0; transition: all 3s ease;}
+.serverFade {opacity: 0;}
+.show {opacity: 1; transition: all 2s ease;}
+
+.servertop {position: absolute; top: 1.4em;}
+.servers {position: relative; height: 1.5em; line-height: 1.5em; width: calc(100% - 2px);}
+/*
+.dev {background-color: #f1f2f2;}
+.branch {background-color: #cacbcc;}
+.fa {background-color: #b7daf5;}
+.ga {background-color: #73b0d7;}
+*/
+
+/* Field Widths */
+.fields {
+	white-space: nowrap;
+}
+.wname {
+	width: 15%;
+	text-align: left;
+	padding-left: 15px;
+	background-color: lightblue;
 }
 
-.serverFade {
-	opacity: 0;
+.wsname {
+	width: 30%;
+	text-align: left;
+	padding-left: 15px;
+	background-color: red;
 }
-.serverFade.show {
-	opacity: 1;
-	transition: all 2s ease;
+
+.wlink {
+	width: 30%;
+	text-align: left;
+	padding-left: 15px;
+	background-color: pink;
+}
+.wnotes {
+	width: 15%;
+	text-align: left;
+	padding-left: 15px;
+	background-color: yellow;
+}
+.wtype {
+	width: 10%;
+	text-align: center;
+	float: right;
+	padding-right: 18px;
+	margin-right: 2px;
+	background-color: lightgreen;
 }
 
 #footer {
