--- a/other/qualityAssuranceV2/css/servers.css
+++ b/other/qualityAssuranceV2/css/servers.css
@@ -1,91 +1,117 @@
-.main {
+#serverMain {
 	position: absolute;
 	top: 0;
 	width: 100%;
 	height: calc(100% - 22px);
+	background-color: #73b0d7;
 }
+
+.main {}
+
+#servertitle {
+	position: absolute;
+	top: 40%;
+	width: 100%;
+	height: 100%;
+	color: #fff;
+}
+
+.titleFade {opacity: 1;}
+.hide {opacity: 0; transition: all 4s ease;}
+
+.serverFade {opacity: 0;}
+.show {opacity: 1; transition: all 2s ease;}
 
 #serverBody {
 	position: absolute;
 	top: 0;
 	bottom: 0;
-//	height: 100%;
+	height: 100%;
 	width: 100%;
-//	background-color: #FFCC99;
+	background-color: #fff;
 }
 
 #servertitles {
 	position: absolute;
 	top: 0;
-	height: 1.5em;
 	width: 100%;
-	line-height: 1.5em;
+	height: 23px;
+	line-height: 23px;
 	border-bottom: 1px solid black;
-	background-color: lightorange;
-	color: white;
 }
 
-.titleFade {
-	opacity: 1;
-	height: 100%;
+#serverListings {
+	position: absolute; 
+	top: 24px;
 	width: 100%;
-	line-height: 500px;
-	font-size: 48;
-	font-style: bolder;
+	height: calc(100% - 24px);
+	background-color: #73b0d7;
 }
-.hide {opacity: 0; transition: all 3s ease;}
-.serverFade {opacity: 0;}
-.show {opacity: 1; transition: all 2s ease;}
 
-.servertop {position: absolute; top: 1.4em;}
-.servers {position: relative; height: 1.5em; line-height: 1.5em; width: calc(100% - 2px);}
-/*
-.dev {background-color: #f1f2f2;}
+.servertop {}
+
+.servers {
+	position: relative;
+	height: 1.5em;
+	line-height: 1.5em;
+	width: 100%;
+}
+
+.dev {background-color: #e4e5e5;}
 .branch {background-color: #cacbcc;}
 .fa {background-color: #b7daf5;}
 .ga {background-color: #73b0d7;}
-*/
+
 
 /* Field Widths */
-.fields {
-	white-space: nowrap;
-}
+.fields {white-space: nowrap;}
+
 .wname {
+	position: absolute;
+	left: 0;
 	width: 15%;
-	text-align: left;
-	padding-left: 15px;
-	background-color: lightblue;
+	margin-left: 2%;
+}
+.wsname {
+	position: absolute;
+	left: 17%;
+	width: 35%;
+	margin-left: 2%;
 }
 
-.wsname {
-	width: 30%;
-	text-align: left;
-	padding-left: 15px;
-	background-color: red;
-}
 
 .wlink {
-	width: 30%;
-	text-align: left;
-	padding-left: 15px;
-	background-color: pink;
+	position: absolute;
+	left: 18%;
+	width: 35%;
+	display: none;
 }
+
 .wnotes {
-	width: 15%;
-	text-align: left;
-	padding-left: 15px;
-	background-color: yellow;
+	position: absolute;
+	left: 52%;
+	width: 20%;
+	margin-left: 2%;
 }
 .wtype {
-	width: 10%;
-	text-align: center;
-	float: right;
-	padding-right: 18px;
-	margin-right: 2px;
-	background-color: lightgreen;
+	position: absolute;
+	left: 75%;
+	width: 15%;
+	margin-left: 2%;
 }
 
 #footer {
+	background-color: #fff;
+	color: #000;
+	transition: all 2s ease;
+}
+
+.linkNav a {
+  color: #000;
+}
+
+.linkNav a:hover {
+	color: #fff;
 	transition: all 2s ease;
 }
 
