--- a/other/qualityAssuranceV2/css/teams.css
+++ b/other/qualityAssuranceV2/css/teams.css
@@ -3,28 +3,31 @@
 	top: 0;
 	width: 100%;
 	height: calc(100% - 22px);
+	background-color: #99ccee;
+	display: table;
 }
 
 #teamBody {
 	position: absolute;
 	top: 0;
 	bottom: 0;
-	background-color: #fff;
+}
+
+#teamTitle {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	color: #fff;
+	top: 40%;
 }
 
 .teamtitleFade {
 	position: absolute;
 	opacity: 1;
-	width: 100%;
-	height: 100%;
-	top: 40%;
-	font-size: 300%;
-	font-style: bolder;
 }
 
 .hide {
 	opacity: 0;
-	height: 0;
 	transition: all 4s ease;
 }
 
@@ -33,7 +36,7 @@
 }
 .show {
 	opacity: 1;
-	transition: all 2s ease;
+	transition: all 3s ease;
 }
 
 #teamLayout {
@@ -63,7 +66,7 @@
 /*	widths	*/
 .teamsList {width: 15%; min-width: 15%; min-height: 5%; text-align: center;}
 .qaList{width: 15%; min-width: 15%; min-height: 5%; text-align: center;}
-.featuresList{width: 55%; min-width: 50% ;min-height: 5%;}
+.featuresList{width: 55%; min-width: 55% ;min-height: 5%;}
 .directorList{width: 15%; min-width: 5%;
 	min-height: 5%; text-align: center;}
 /* width end */
@@ -146,10 +149,10 @@
 .highlight:active {background-color: #fff;color:000;}
 
 .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #94a4a5;
-    width: 100%;
+	display: none;
+	position: absolute;
+	background-color: #94a4a5;
+	width: 100%;
 }
 
 .show {
